# VSCodeFBXTest

./: CMakeLists.txt
libsources/: fbxtest.h  helloworld.cpp
sources/: fbxtest.h  main.cpp
